--- a/brainfuck-io.tex
+++ b/brainfuck-io.tex
@@ -1,12 +1,3 @@
-\def\sanitiseInput#1{
-	#1%
-}
-
-
-\def\sanitiseOutput#1{%
-	\char#1\relax%
-}
-
 \def\prompt#1{%
 	\begingroup
 	\catcode`\^^M=9 % ignore the end-of-line
@@ -18,7 +9,7 @@
 \newlinechar=`\^^J%
 
 \def\promptprogram{%
-	\message{^^J^^JPlease type in your program or, `stop' to end.^^J}%
+	\message{^^J^^JPlease type in your program or, [enter] to end.^^J}%
 	\prompt\program%
 	\def\endingsymbol{}%
 	\ifx\program\endingsymbol%
@@ -27,3 +18,5 @@
 		\promptprogram%
 	\fi%
 }
+
+\endinput
