--- a/brainfuck.tex
+++ b/brainfuck.tex
@@ -32,6 +32,14 @@
 	\@execute#1^%
 }
 
+\def\prompt#1{%
+	\begingroup
+	\catcode`\^^M=9 % ignore the end-of-line
+	\read 20 to #1%
+	\expandafter\endgroup
+	\expandafter\def\expandafter#1\expandafter{#1}%
+}
+
 \newcount\stackptr
 \newcount\tempval
 \newcount\brackets
